compiler/weave_syntax/tests/data/syntax/statements/a0003.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | #[Deprecated] public break
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^
